--- a/Layouts/app/src/main/res/layout/activity_main.xml
+++ b/Layouts/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_centerHorizontal="false"
+    android:background="#EAFCFF"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textEx"
-        android:layout_width="150dp"
+
+    <EditText
+        android:id="@+id/editTextName"
+        android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="236dp"
-        android:background="#DCBABA"
-        android:paddingStart="15sp"
-        android:text="Hello World to the LW4!"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="50dp"
+        android:ems="10"
+        android:hint="Please write your name"
+        android:inputType="text" />
 
     <Button
-        android:id="@+id/doMagic"
-        android:layout_width="wrap_content"
+        android:id="@+id/ok"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="158dp"
-        android:layout_marginBottom="233dp"
-        android:text="Do your magic"
-        android:background="@drawable/button_shape"
-        app:backgroundTint="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textEx" />
+        android:layout_marginTop="30dp"
+        android:text="OK" />
 
-    <Button
-        android:id="@+id/myButton"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Button 2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="Result:" />
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginBottom="47dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/textEx"
-        app:layout_constraintStart_toStartOf="@+id/textEx" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
