--- a/Layouts/app/src/main/res/layout/activity_main.xml
+++ b/Layouts/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,19 @@
     android:layout_height="match_parent"
     android:layout_centerHorizontal="false"
     android:background="@android:color/white"
-    android:gravity="center_horizontal|center_vertical"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:gravity="top"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
 
     <TextView
         android:id="@+id/textView"
@@ -22,4 +31,5 @@
         android:id="@+id/spinnerCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
 </LinearLayout>
