--- a/ScroollWebViews/app/src/main/res/layout/activity_main.xml
+++ b/ScroollWebViews/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,70 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 1" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 2 " />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 3" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 4" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 5" />
-
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 6" />
-
-        <Button
-            android:id="@+id/button7"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 7" />
-
-        <Button
-            android:id="@+id/button8"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 8" />
-
-        <Button
-            android:id="@+id/button9"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 9" />
-
-        <Button
-            android:id="@+id/button10"
-            android:layout_width="251dp"
-            android:layout_height="122dp"
-            android:text="Button 10" />
-    </LinearLayout>
-</ScrollView>
+    <WebView
+        android:id="@+id/web"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
